--- a/README.org
+++ b/README.org
@@ -23,17 +23,22 @@ contenido.
 
 ** Agosto de 2020
 
+*** 17-Ago-20
++ [[https://github.com/foxthomson/impartial][A proof of the Sprague-Grundy theorem and other results related to impartial games in Lean]]. ~ Fox Thomson. #ITP #LeanProver
++ [[https://arxiv.org/abs/1904.03241][HOList: An environment for machine learning of higher-order theorem proving]]. ~ Kshitij Bansal, Sarah M. Loos, Markus N. Rabe, Christian Szegedy, Stewart Wilcox. #ITP #HOL_Light #MachineLearning
++ [[https://kowainik.github.io/posts/haskell-mini-patterns][Haskell mini-patterns handbook]]. ~ Dmitrii Kovanikov (@ChShersh), Veronika Romashkina (@vrom911). #Haskell #FunctionalProgramming
+
+*** 16-Ago-20
++ [[https://arxiv.org/abs/2008.04165v1][Proof-carrying plans: a resource logic for AI planning]]. ~ Alasdair Hill, Ekaterina Komendantskaya, Ronald P. A. Petrick. #ITP #Agda #AI
++ [[https://www.researchgate.net/publication/335335097_Verifying_an_Incremental_Theory_Solver_for_Linear_Arithmetic_in_IsabelleHOL][Verifying an incremental theory solver for linear arithmetic in Isabelle/HOL]]. ~ Ralph Bottesch, Max W. Haslbeck, René Thiemann. #ITP #IsabelleHOL
++ [[http://olivernash.org/2020/08/08/mathlib/index.html][The Mathlib formalisation project needs your help (A serious effort to formalise modern mathematics)]]. ~ Oliver Nash. #ITP #LeanProver #Math
+
 *** 15-Ago-20
 + [[https://lean-forward.github.io/lean-together/2019/slides/wu.pdf][A verified tableau prover for modal logic K- ~ Minchao Wu]]. #ITP #LeanProver #Logic
 + [[https://iokasimov.github.io/posts/2020/08/wgc-effects][Cross wolf, goat and cabbage across the river with effects]]. ~ Murat Kasimov #Haskell #FunctionalProgramming
 + [[https://jmtd.net/log/generic_haskell/][Generic Haskell]]. ~ Jonathan Dowland (@jmtd). #Haskell #FunctionalProgramming
 + [[http://wcl.cs.rpi.edu/papers/DDDAS2020_Cruz.pdf][Towards provably correct probabilistic flight systems]]. ~ Elkin Cruz-Camacho, Saswata Paul, Fotis Kopsaftopoulos, Carlos A. Varela. #ITP #Agda
 + [[https://www.isa-afp.org/entries/Amicable_Numbers.html][Amicable numbers in Isabelle/HOL]]. ~ Angeliki Koutsoukou-Argyraki. #ITP #IsabelleHOL #Math
-
-*** 16-Ago-20
-+ [[https://arxiv.org/abs/2008.04165v1][Proof-carrying plans: a resource logic for AI planning]]. ~ Alasdair Hill, Ekaterina Komendantskaya, Ronald P. A. Petrick. #ITP #Agda #AI
-+ [[https://www.researchgate.net/publication/335335097_Verifying_an_Incremental_Theory_Solver_for_Linear_Arithmetic_in_IsabelleHOL][Verifying an incremental theory solver for linear arithmetic in Isabelle/HOL]]. ~ Ralph Bottesch, Max W. Haslbeck, René Thiemann. #ITP #IsabelleHOL
-+ [[http://olivernash.org/2020/08/08/mathlib/index.html][The Mathlib formalisation project needs your help (A serious effort to formalise modern mathematics)]]. ~ Oliver Nash. #ITP #LeanProver #Math
 
 *** 14-Ago-20
 + [[https://lean-forward.github.io/lean-together/2019/slides/buzzard.pdf][Using Lean with undergraduate mathematicians]]. ~ Kevin Buzzard (@XenaProject). #ITP #LeanProver #Math 
