--- a/README.org
+++ b/README.org
@@ -23,6 +23,10 @@ contenido.
 
 ** Agosto de 2020
 
+*** 24-Ago-20
++ [[https://ucsd-progsys.github.io/liquidhaskell-blog/2020/08/20/lh-as-a-ghc-plugin.lhs/][LiquidHaskell is a GHC plugin]]. ~ Ranjit Jhala (@RanjitJhala). #Haskell #FunctionalProgramming
++ [[https://amandeepsp.github.io/fp-is-awesome/][Functional programming is awesome!!]] ~ Amandeep Singh (@theamndeepsingh). #FunctionalProgramming #Haskell
+
 *** 23-Ago-20
 + [[https://www.logicmatters.net/resources/pdfs/IFL2_LM.pdf][An introduction to formal logic]]. ~ Peter Smith. #eBook #Logic
 + [[https://www.logicmatters.net/resources/pdfs/godelbook/GodelBookLM.pdf][An introduction to Gödel's theorems]]. ~ Peter Smith. #eBook #Logic
