--- a/README.org
+++ b/README.org
@@ -23,6 +23,9 @@ contenido.
 
 ** Agosto de 2020
 
+*** 27-Ago-20
++ [[https://arxiv.org/abs/1907.05523][Towards a verified model of the Algorand consensus protocol in Coq]]. ~ Musab A. Alturki et als. #ITP #Coq
+
 *** 26-Ago-20
 + [[https://www.isa-afp.org/entries/Relational_Disjoint_Set_Forests.html][Relational disjoint-set forests in Isabelle/HOL]]. ~ Walter Guttmann. #ITP #IsabelleHOL
 + [[https://softwarefoundations.cis.upenn.edu/vc-current/][Verifiable C]]. ~ Andrew W. Appel, Qinxiang Cao. #eBook #ITP #Coq
